added JDOM jars

--- a/mddf-lib/.classpath
+++ b/mddf-lib/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="lib/poi-ooxml-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/jdom-2.0.5.jar"/>
+	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
