--- a/mddf-tools/.classpath
+++ b/mddf-tools/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/mddf-lib"/>
 	<classpathentry kind="lib" path="/mddf-lib/lib/jdom-2.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.3.1.jar"/>
 	<classpathentry kind="lib" path="/mddf-lib/lib/json-lib-2.4-jdk15.jar"/>
@@ -10,5 +9,7 @@
 	<classpathentry kind="lib" path="/mddf-lib/lib/log4j-core-2.6.2.jar"/>
 	<classpathentry kind="lib" path="/mddf-lib/lib/poi-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/mddf-lib/lib/poi-ooxml-3.14-20160307.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/mddf-lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
