--- a/mddf-lib/build.xml
+++ b/mddf-lib/build.xml
@@ -22,7 +22,7 @@
 	<property name="proj.name" value="mddf-lib" />
 	<property name="proj.home" value="." />
 	<!-- ================================================================ -->
-	<property name="proj.version" value="1.0.2_rc1" />
+	<property name="proj.version" value="1.0.2" />
 	<property name="proj.package" value="com/movielabs/mddflib" />
 	<property name="proj.build" value="${proj.home}/build" />
 	<property name="proj.lib" value="${proj.home}/lib" />
