--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,7 +3,7 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.0.2_rc2" />
+	<property name="mddf-lib.version" value="1.0.2" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
 	<property name="app.version.cmm" value="1.2" />
 	<property name="app.version.avail" value="0.9" />
