--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,13 +3,14 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.1.2" />
+	<property name="mddf-lib.version" value="1.1.3" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
-	<property name="app.version.cmm" value="1.2.4" />
-	<property name="app.version.avail" value="1.1.2" />
+	<property name="app.version.cmm" value="1.2.5.rc2" />
+	<property name="app.version.avail" value="1.1.3.rc1" />
 	<property name="proj.appDev" value="${proj.home}/dev/packaging" />
 	<property name="proj.rsrcFolder" value="${proj.home}/resources" />
 	<property name="proj.package" value="com/movielabs/mddf/tools" />
+	<property name="binaries.home" value="${proj.home}/binaries" />
 
 	<target name="test">
 		<echo message="Hello, this is ANT" />
@@ -49,7 +50,8 @@
 				<include name="*.jar" />
 			</fileset>
 		</copy>
-		<echo message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+		<echo
+			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
 		<copy todir="${appPack.dir}/externalLibs">
 			<fileset dir="${mddf-lib.home}">
 				<include name="mddf-lib-${mddf-lib.version}.jar" />
@@ -86,7 +88,7 @@
 	</target>
 
 
-	<target name='do-compile'>
+	<target name='do-compile' depends='setup-staging-area'>
 		<delete dir="${appPack.dir}/build" />
 		<mkdir dir="${appPack.dir}/build/src" />
 		<mkdir dir="${appPack.dir}/build/libs" />
@@ -94,20 +96,21 @@
 
 		<!-- create a build.prop file in the build/classes directory. -->
 		<tstamp />
-		<echo file="${appPack.dir}/build/classes/${proj.package}/build.properties" append="false">#
+		<echo file="${appPack.dir}/build/classes/${proj.package}/build.properties"
+			append="false">#
 			Project Build properties
 			versionAvail=${app.version.avail}
 			versionCMM=${app.version.cmm}
 			buildDate=${TODAY}
 			buildTime=${TSTAMP}
 		</echo>
-		
+
 		<!-- Copy project-libs references -->
 		<copy todir="${appPack.dir}/build/libs">
 			<fileset dir="${appPack.dir}/externalLibs">
 				<include name="*.jar" />
 			</fileset>
-		</copy> 
+		</copy>
 
 		<!-- Copy project references -->
 
@@ -189,6 +192,7 @@
 		</fx:jar>
 
 		<mkdir dir="${appPack.dir}/deploy" />
+		<echo message="Ready to deploy ${toolName} for ${os.name}." />
 		<!-- Need to use ${appPack.dir} because somehow the ant task is calculating 
 			the directory differently -->
 		<fx:deploy embedJNLP="false" extension="false" includeDT="false"
@@ -237,6 +241,43 @@
 		<antcall target="copy-distros" />
 	</target>
 
+	<target name="create_run_jar" depends="do-compile">
+		<echo
+			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
+		<jar destfile="${binaries.home}/mddf-tool-v${mddf-lib.version}_rc2.jar">
+			<manifest>
+				<attribute name="Main-Class"
+					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
+				<attribute name="Rsrc-Main-Class" value="com.movielabs.mddf.tools.ToolLauncher" />
+				<attribute name="Class-Path" value="." />
+				<attribute name="Rsrc-Class-Path"
+					value="./ mddf-lib-${mddf-lib.version}.jar commons-beanutils-1.9.2.jar commons-collections-3.2.1.jar commons-logging-1.2.jar ezmorph-1.0.6.jar jaxen-1.1.1.jar jaxen-jdom.jar jdom-2.0.5.jar json-lib-2.4-jdk15.jar log4j-api-2.6.2.jar log4j-core-2.6.2.jar poi-3.14-20160307.jar poi-ooxml-3.14-20160307.jar poi-ooxml-schemas-3.14-20160307.jar xmlbeans-2.6.0.jar commons-cli-1.3.1.jar commons-lang-2.6.jar junit.jar org.hamcrest.core_1.3.0.v201303031735.jar" />
+			</manifest>
+			<zipfileset src="jar-in-jar-loader.zip" />
+			<zipfileset dir="${mddf-lib.home}" includes="mddf-lib-${mddf-lib.version}.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-beanutils-1.9.2.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-collections-3.2.1.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="commons-logging-1.2.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="ezmorph-1.0.6.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="jaxen-1.1.1.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="jaxen-jdom.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="jdom-2.0.5.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="json-lib-2.4-jdk15.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="log4j-api-2.6.2.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="log4j-core-2.6.2.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-3.14-20160307.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-ooxml-3.14-20160307.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="poi-ooxml-schemas-3.14-20160307.jar" />
+			<zipfileset dir="${mddf-lib.home}/lib" includes="xmlbeans-2.6.0.jar" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-cli-1.3.1.jar" />
+			<zipfileset dir="${proj.home}/lib" includes="commons-lang-2.6.jar" />
+			<fileset dir="${appPack.dir}/build/classes" />
+			<zipfileset dir="/opt/eclipse/plugins/org.junit_4.12.0.v201504281640"
+				includes="junit.jar" />
+			<zipfileset dir="/opt/eclipse/plugins"
+				includes="org.hamcrest.core_1.3.0.v201303031735.jar" />
+		</jar>
+	</target>
 
 
 
