--- a/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
@@ -1,7 +1,7 @@
 {
 	"V1_7": 
 	{
-		"Movie": 
+		"Movies": 
 		{
 			"Avail:ALID": "{avail}ALID",
 			"Avail:AvailID": "{avail}Transaction/@TransactionID",
