Bug fix: When translating XML Avails to XLSX the AvailID was always set to the TransactionID of the 1st Transaction.

--- a/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
+++ b/mddf-lib/src/com/movielabs/mddflib/avails/xlsx/Mappings.json
@@ -78,7 +78,8 @@
 			],
 
 			"AvailTrans:WatchDuration": "{avail}Term/{avail}Duration[../@termName='WatchDuration']",
-			"AvailTrans:WCG": "{avail}FormatProfile/@WCG"
+			"AvailTrans:WCG": "{avail}FormatProfile/@WCG",
+			"AvailTrans:Avail/AvailID": "@TransactionID"
 		},
 
 		"TV": 
@@ -277,7 +278,8 @@
 			],
 
 			"AvailTrans:WatchDuration": "{avail}Term/{avail}Duration[../@termName='WatchDuration']",
-			"AvailTrans:WCG": "{avail}FormatProfile/@WCG"
+			"AvailTrans:WCG": "{avail}FormatProfile/@WCG",
+			"AvailTrans:Avail/AvailID": "@TransactionID"
 		}
 	}
 }
