--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,10 +3,10 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.1.3" />
+	<property name="mddf-lib.version" value="1.1.3.rc6" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
-	<property name="app.version.cmm" value="1.2.5.rc2" />
-	<property name="app.version.avail" value="1.1.3.rc1" />
+	<property name="app.version.cmm" value="1.2.5.rc3" />
+	<property name="app.version.avail" value="1.1.3.rc3" />
 	<property name="proj.appDev" value="${proj.home}/dev/packaging" />
 	<property name="proj.rsrcFolder" value="${proj.home}/resources" />
 	<property name="proj.package" value="com/movielabs/mddf/tools" />
@@ -203,7 +203,7 @@
 
 			<fx:info title="${toolName}Validator" vendor="Motion Picture Laboratories, Inc."
 				description="${toolName} Validator" category="Interactivity"
-				copyright="(c) 2016 Motion Picture Laboratories, Inc." license="MIT" />
+				copyright="(c) 2017 Motion Picture Laboratories, Inc." license="MIT" />
 			<fx:application refId="fxApplication" />
 			<fx:resources refid="appRes" />
 		</fx:deploy>
@@ -244,7 +244,7 @@
 	<target name="create_run_jar" depends="do-compile">
 		<echo
 			message="Using mddf-lib JAR ${mddf-lib.home}/mddf-lib-${mddf-lib.version}.jar" />
-		<jar destfile="${binaries.home}/mddf-tool-v${mddf-lib.version}_rc2-DBG.jar">
+		<jar destfile="${proj.home}/../binaries/mddf-tool-v${mddf-lib.version}.jar">
 			<manifest>
 				<attribute name="Main-Class"
 					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
