--- a/mddf-tools/dev/packaging/build.xml
+++ b/mddf-tools/dev/packaging/build.xml
@@ -3,10 +3,10 @@
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
 	<property name="proj.home" value="${basedir}/../.." />
 	<property name="mddf-lib.home" value="${proj.home}/../mddf-lib" />
-	<property name="mddf-lib.version" value="1.1.3.rc8" />
+	<property name="mddf-lib.version" value="1.3.rc1" />
 	<property name="appPack.dir" value="${proj.home}/packager" />
-	<property name="app.version.cmm" value="1.2.5.rc3" />
-	<property name="app.version.avail" value="1.1.3.rc3" />
+	<property name="app.version.cmm" value="${mddf-lib.version}.a" />
+	<property name="app.version.avail" value="${mddf-lib.version}.a" />
 	<property name="proj.appDev" value="${proj.home}/dev/packaging" />
 	<property name="proj.rsrcFolder" value="${proj.home}/resources" />
 	<property name="proj.package" value="com/movielabs/mddf/tools" />
